@@ -19,5 +19,6 @@ quelea (2015.3) stable; urgency=normal
   * Fix live videos restarting when song in schedule is edited
   * Fix search index not working with non=ascii characters
   * Fix behaviour where empty bible passages could be added to schedule
+  * Fix issue with schedule not opening when a presentation it refers to is missing.
 
  -- Michael Berry <michael@quelea.org>  Wednesday, 16 May 2015 00:00:00 +0000
